--- a/DiamondShopSystem/src/main/resources/application.properties
+++ b/DiamondShopSystem/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/diamondshopdb
+spring.datasource.url=jdbc:mysql://172.104.188.193:3306/diamondshopdb
 spring.datasource.username=root
 spring.datasource.password=@Hoangcuteso1
 spring.jpa.hibernate.ddl-auto=update
