--- a/DiamondShopSystem/pom.xml
+++ b/DiamondShopSystem/pom.xml
@@ -52,6 +52,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.740</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
