--- a/DiamondShopSystem/src/main/resources/application.properties
+++ b/DiamondShopSystem/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:mysql://172.104.188.193:3306/diamondshopdb
 spring.datasource.username=root
 spring.datasource.password=@Hoangcuteso1
 spring.jpa.hibernate.ddl-auto=update
+linode.access-key=KNDCJDNHG7R195GSQYTI
+linode.secret-key=5NSZyWYXMFWpHk3dYHmEQ2AzElo9R52aNZ5VwPuo
+linode.endpoint=ap-south-1.linodeobjects.com
+linode.region=ap-south-1
+linode.bucket-name=diamondshop-img
