--- a/DiamondShopSystem/pom.xml
+++ b/DiamondShopSystem/pom.xml
@@ -57,7 +57,16 @@
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.12.740</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.32</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
