--- a/DiamondShopSystem/Dockerfile
+++ b/DiamondShopSystem/Dockerfile
@@ -1,5 +1,13 @@
 FROM openjdk:17-jdk-alpine
-ARG JAR_FILE=target/*.jar
+
+WORKDIR /app
+
+COPY .mvn/ .mvn
+COPY mvnw pom.xml ./
+RUN ./mvnw dependency:go-offline
+
 EXPOSE 8080
-COPY ./target/DiamondShopSystem-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+
+COPY src ./src
+
+CMD ["./mvnw", "spring-boot:run"]
