--- a/DiamondShopSystem/src/main/resources/application.properties
+++ b/DiamondShopSystem/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:mysql://172.104.188.193:3306/diamondshopdb
 spring.datasource.username=root
 spring.datasource.password=@Hoangcuteso1
 spring.jpa.hibernate.ddl-auto=update
-linode.access-key=MTCGBYLP5F8BWHOQPPGF
-linode.secret-key=6SswGcamRbFk7zkAcuPq4JCsYnRjRIZ5jwYSqWQz
+linode.access-key=GKSG7P9M5ZNGEU1JQ7PY
+linode.secret-key=xijS53zVjtlwV9oxq7bRu7l2btafJexEDPGNtoo8
 linode.endpoint=ap-south-1.linodeobjects.com
 linode.region=ap-south-1
 linode.bucket-name=diamondshop-img
@@ -16,3 +16,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.debug=true
+#
+spring.security.oauth2.client.registration.google.client-id=796635841083-bek0fn0ui5f1psi9v3ngpl6lhipqjkb0.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
