--- a/DiamondShopSystem/src/main/resources/application.properties
+++ b/DiamondShopSystem/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/diamondshopdb
+spring.datasource.url=jdbc:mysql://172.104.193:3306/diamondshopdb
 spring.datasource.username=root
-spring.datasource.password=nana
+spring.datasource.password=@Hoangcuteso1
 spring.jpa.hibernate.ddl-auto=update
 linode.access-key=GKSG7P9M5ZNGEU1JQ7PY
 linode.secret-key=xijS53zVjtlwV9oxq7bRu7l2btafJexEDPGNtoo8
