--- a/DiamondShopSystem/src/main/resources/application.properties
+++ b/DiamondShopSystem/src/main/resources/application.properties
@@ -9,7 +9,7 @@ linode.region=ap-south-1
 linode.bucket-name=diamondshop-img
 spring.mail.host=mail.privateemail.com
 spring.mail.port=465
-spring.mail.username=admin@hephaestus.store
+spring.mail.username=noreply@hephaestus.store
 spring.mail.password=@Hoangcuteso1
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
