--- a/DiamondShopSystem/src/main/resources/application.properties
+++ b/DiamondShopSystem/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.mail.username=noreply@hephaestus.store
 spring.mail.password=@Hoangcuteso1
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.debug=true
-#
+##
 spring.security.oauth2.client.registration.google.client-id=796635841083-bek0fn0ui5f1psi9v3ngpl6lhipqjkb0.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
