--- a/DiamondShopSystem/Dockerfile
+++ b/DiamondShopSystem/Dockerfile
@@ -1,14 +1,15 @@
-FROM openjdk:17-jdk-alpine
-
+# Build stage
+FROM openjdk:17-jdk-alpine as build
 WORKDIR /app
-
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
 RUN chmod +x ./mvnw
-RUN ./mvnw dependency:go-offline
-
-EXPOSE 8080
-
 COPY src ./src
+RUN ./mvnw package
 
-CMD ["./mvnw", "spring-boot:run"]
+# Package stage
+FROM openjdk:17-jdk-alpine
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
+EXPOSE 8080
+CMD ["java", "-jar", "app.jar"]
