--- a/DiamondShopSystem/src/main/resources/application.properties
+++ b/DiamondShopSystem/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.mail.host=mail.privateemail.com
 spring.mail.port=465
 spring.mail.username=noreply@hephaestus.store
 spring.mail.password=@Hoangcuteso1
-spring.mail.properties.mail.smtp.from=noreply@hephaestus.store
+spring.mail.properties.mail.smtp.from=admin@hephaestus.store
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.starttls.enable=true
