--- a/DiamondShopSystem/src/main/resources/application.properties
+++ b/DiamondShopSystem/src/main/resources/application.properties
@@ -7,14 +7,14 @@ linode.secret-key=xijS53zVjtlwV9oxq7bRu7l2btafJexEDPGNtoo8
 linode.endpoint=ap-south-1.linodeobjects.com
 linode.region=ap-south-1
 linode.bucket-name=diamondshop-img
-spring.mail.host=mail.privateemail.com
-spring.mail.port=465
+spring.mail.host=smtp.privateemail.com
+spring.mail.port=587
 spring.mail.username=noreply@hephaestus.store
 spring.mail.password=@Hoangcuteso1
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=false
 spring.mail.properties.mail.debug=true
 #
 spring.security.oauth2.client.registration.google.client-id=796635841083-bek0fn0ui5f1psi9v3ngpl6lhipqjkb0.apps.googleusercontent.com
